# DebiasingSIGGRAPH2022

./: .gitignore  README.md
Canonical/: CMakeLists.txt
Canonical/ext/ImageEditLib/: .gitignore  .gitmodules  CMakeLists.txt  README.md
Canonical/ext/ImageEditLib/bias/: pixel_wise_mse.cpp  scene_convergence.cpp  smoke_scene_convergence.cpp  variance_rr.cpp
Canonical/ext/ImageEditLib/ext/stb/: stb_image.h  stb_image_write.h
Canonical/ext/ImageEditLib/include/imedit/: filter.h  im_color_maps.h  im_util.h  image.h  noise.h  pixel.h  procedural.h
Canonical/ext/ImageEditLib/misc/: frame_missing_counter.cpp  readme.txt  shader_toy_buffer_setup.cpp  spinny_wheel.cpp  xeno_anim_prep.cpp
Canonical/ext/ImageEditLib/src/: image.cpp
Canonical/ext/ImageEditLib/test/: adrien_name_demo.cpp  bbox_gen.cpp  color_maps.cpp  displacement_demo.cpp  hetero_2_vid.cpp  hsl_conversion_tests.cpp  main.cpp  mandlebrot_vis.cpp  move_demo.cpp  noise_sandbox.cpp  smily_demo.cpp  texture_gen.cpp  wavy_stuff.cpp
Canonical/include/conver/: bounds.h  conv_data.h  conv_eval.h  conver.h  experiment.h  experiment_manager.h  grapher.h  list_comp.h  problem.h  sample_interval.h  simple_funcs.h  technique.h
Canonical/include/conver/funcs/: bin_func.h  was_funcs.h
Canonical/include/conver/misc/: efloat.h  ray.h  sphere.h  vector.h
Canonical/include/conver/techniques/: all_techs.h  tele_final.h
Canonical/include/conver/techniques/exp/: exp_nvidia.h  exp_pcmf.h  exp_pcume.h  exp_pratio.h
Canonical/include/conver/techniques/photon/: photon_alpha_cone.h  photon_alpha_quad.h  photon_alpha_uni.h  photon_blanchet.h  photon_blanchet_safen.h  photon_prog_alpha_cone.h  photon_secondary_blanchet.h  photon_secondary_blanchet_acap.h  photon_secondary_blanchet_diff2n.h  photon_secondary_blanchet_diffn.h  photon_secondary_blanchet_safen.h  photon_secondary_blanchet_test.h  photon_square_cone.h  photon_square_quad.h  photon_square_quart.h  photon_square_uni.h
Canonical/include/conver/techniques/pink/: pink_cmf_exp.h  pink_nvidia.h  pink_nvidia_exp.h  pink_pcume.h  pink_pcume_exp.h  pink_ratio_exp.h
Canonical/include/conver/techniques/recip/: bin_bernoulli.h  bin_bernoulli_cor.h  bin_bernoulli_nonbin.h  bin_pcume.h  recip_cmf.h  recip_pcume.h  recip_ratio.h  recip_ratio_minmax.h  recip_ratio_rr.h  sai_was.h
Canonical/scripts/: emp_conv_slope.py  graph_func.py  graph_funcs.py  graph_funcs_tmp.py  photon_ci.py  photon_deltas.py  photon_emp_equs.py  photon_emp_equs_batch.py  power_law_ci.py  power_law_ci_batch_ci.py  power_law_ci_batch_dist.py  power_law_ci_batch_percentile.py  power_law_ci_batch_width.py  power_law_ci_percentile_final.py  power_law_ci_width_final.py  power_law_final.py  ppm_vs_deb_allplots.py  ppm_vs_deb_allplots_batch.py  prog_photon_delta.py  prog_photon_dense.py  prog_photon_vs_tele.py  prog_photon_vs_tele_sandbox.py  setup.py
Canonical/src/: conv_data.cpp  conv_eval_heat.cpp  conv_eval_unbiased.cpp  conv_int_eval.cpp  conv_trial.cpp  grapher.cpp  main.cpp
Canonical/src/experiments/: experiment_manager.cpp
Canonical/src/experiments/davis/: pink_davis_heat_img.cpp
Canonical/src/experiments/exp/: exp_heat_img.cpp
Canonical/src/experiments/photon/: emp_conv_ci.cpp  equal_cost_photon.cpp
Canonical/src/experiments/recip/: recip_heat_img.cpp
Canonical/src/misc/: sphere.cpp
Canonical/src/problems/: exp_trans.cpp  integral.cpp  pink_davis.cpp  pow_law.cpp  reciprocal.cpp  simple_ao.cpp  simple_fd.cpp  staircase.cpp  step.cpp  step_integral.cpp
